# slipstream

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  Makefile  openapi.json  skills-lock.json
.claude/: settings.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
SlipStream/: AppRootView.swift  ContentView.swift  (+12 more)
SlipStream.xcodeproj/: project.pbxproj
backend/: .dockerignore  .env  Dockerfile  README.md  TESTING.md  alembic.ini  api.lapis  docker-bake.hcl  docker-compose.yml  pyproject.toml  test.db
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  2026_06_09_2147_73dedd7af426_initial_schema.py  2026_06_10_2318_add_car_display_name.py  2026_06_30_1200_add_user_phone_number.py  2026_06_30_1300_add_user_email_unique.py
backend/docs/: in-memory-realtime-server.md
backend/scripts/: generate_dev_token.py  seed.py  ws_test_client.py
backend/src/backend/: __init__.py  auth.py  config.py  database.py  dependencies.py  main.py  models.py  redis.py
backend/src/backend/cli/: __init__.py  openapi.py
backend/src/backend/realtime/: __init__.py  events.py  handlers.py  manager.py  router.py
backend/src/backend/routers/: __init__.py  auth.py  cars.py  convoys.py  discovery.py  friends.py  users.py
backend/src/backend/spatial/: __init__.py  handlers.py  router.py  store.py  types.py
backend/src/slipstream/: auth.py  config.py  database.py  dependencies.py  logging.py  main.py  models.py
backend/src/slipstream/cli/: __init__.py  openapi.py
backend/src/slipstream/routers/: auth.py  cars.py  convoys.py  friends.py  users.py
backend/src/slipstream/spatial/: __init__.py  handlers.py  router.py  store.py
backend/tests/: conftest.py  test_auth.py  test_cars.py  test_convoys.py  test_friends.py
backend/tools/: __init__.py
backend/tools/simulator/: __init__.py  __main__.py  config.py  driver.py  routes.py
(+178 files in other folders)
