[project]
name = "slipstream"
version = "0.1.0"
description = "SlipStream backend — real-time social driving network API"
readme = "README.md"
authors = [{ name = "kbreese-x", email = "kai.breese@xifin.com" }]
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.136.3",
    "geoalchemy2>=0.20.0",
    "httpx>=0.28.1",
    "h3>=4.5.0",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "rich>=14.0.0",
    "sqlalchemy[asyncio]>=2.0.50",
    "structlog>=25.1.0",
    "uvicorn>=0.49.0",
    "websockets>=13.0",
    "paracelsus[dev]>=0.15.0",
]

[project.optional-dependencies]
cli = ["click>=8.1.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "aiosqlite>=0.20.0",
    "paracelsus>=0.15.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.scripts]
slipstream = "slipstream.cli:cli"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"


[tool.paracelsus]
base = "slipstream.models:Base"
imports = ["slipstream.models"]


[tool.fastapi]
entrypoint = "slipstream.main:app"
